--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "study-electronjs",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "electronjs app",
   "main": "./app/index.js",
   "scripts": {
@@ -10,10 +10,23 @@
   "author": "Endang Ismaya",
   "license": "MIT",
   "devDependencies": {
+    "electron-packager": "^13.1.1",
     "eslint": "^5.16.0",
-    "eslint-config-google": "^0.13.0"
+    "eslint-config-google": "^0.13.0",
+    "gulp": "^4.0.2",
+    "gulp-browserify": "^0.5.1",
+    "gulp-concat-css": "^3.1.0",
+    "gulp-react": "^4.0.0",
+    "gulp-run": "^1.7.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "reactify": "^1.1.1"
   },
   "dependencies": {
-    "electron": "^5.0.1"
+    "bootstrap": "^4.3.1",
+    "electron": "^5.0.1",
+    "electron-reload": "^1.4.0",
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.11"
   }
 }
