--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "study-electronjs",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "electronjs app",
-  "main": "./app/index.js",
+  "main": "./app/main.js",
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,7 +13,7 @@
     "electron-packager": "^13.1.1",
     "eslint": "^5.16.0",
     "eslint-config-google": "^0.13.0",
-    "gulp": "^4.0.2",
+    "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-concat-css": "^3.1.0",
     "gulp-react": "^4.0.0",
@@ -27,6 +27,7 @@
     "electron": "^5.0.1",
     "electron-reload": "^1.4.0",
     "jquery": "^3.4.1",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "popper.js": "^1.15.0"
   }
 }
