--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "electron-packager": "^13.1.1",
     "eslint": "^5.16.0",
     "eslint-config-google": "^0.13.0",
+    "eslint-plugin-react": "^7.13.0",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-concat-css": "^3.1.0",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "create-react-class": "^15.6.3",
     "electron": "^5.0.1",
     "electron-reload": "^1.4.0",
     "jquery": "^3.4.1",
