--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "study-electronjs",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "electronjs app",
-  "main": "./app/main.js",
+  "main": "./build/main.js",
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,15 +10,17 @@
   "author": "Endang Ismaya",
   "license": "MIT",
   "devDependencies": {
+    "concat": "^1.0.3",
     "electron-packager": "^13.1.1",
     "eslint": "^5.16.0",
     "eslint-config-google": "^0.13.0",
     "eslint-plugin-react": "^7.13.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-browserify": "^0.5.1",
     "gulp-concat-css": "^3.1.0",
     "gulp-react": "^4.0.0",
     "gulp-run": "^1.7.1",
+    "htmlclean": "^3.0.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "reactify": "^1.1.1"
